# avengers_get_xco2_locations

./: .gitignore  01_get_obs_masks.py  02_apply_cloud_filter.py  03_apply_thinning.py  03_select_land_nadir.py  04_apply_thinning.py  05_create_xco2_locations.py  config.py  plot_obs_coverage.py  pyproject.toml  utils.py
