[project]
name = "get-xco2-locations"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "cartopy>=0.25.0",
    "matplotlib>=3.10.8",
    "netcdf4>=1.7.4",
    "pandas>=3.0.1",
    "pyqt6>=6.10.2",
    "xarray>=2026.2.0",
]
